# daily-read

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  i18n.py  main.py  models.py  pipeline.py  related_papers.py  rendering.py  storage.py  version.py
app/glossary/: base.py  factory.py  heuristic.py  llm.py
app/ingestion/: source_resolver.py
app/pdf/: extraction.py  grobid_client.py  layout.py  tei_parse.py
app/static/: calendar.js  index.js  processing.js  reader.js  styles.css  sw.js
app/templates/: _calendar_widget.html  base.html  calendar.html  index.html  paper.html  processing.html
plan/: 01-figure-panel-scroll.md  02-one-command-startup.md  03-pdf-domain-extraction-gaps.md  04-glossary-quality-and-user-vocabulary.md  05-user-feedback-round2.md  06-performance-investigation.md  07-troubleshooting-backlog.md  README.md
tests/: conftest.py  helpers.py  test_annotation_highlighting.py  test_annotations_db.py  test_annotations_route.py  test_async_processing.py  test_bibliography_json.py  test_calendar.py  test_duplicate_detection.py  test_figure_fallback_rendering.py  test_glossary_base.py  test_glossary_heuristic.py  test_glossary_ner_cache.py  test_grobid_client.py  test_i18n.py  test_interpretations_db.py  test_known_terms.py  test_layout.py  test_match_annotations.py  test_paper_deletion.py  test_paper_view_route.py  test_pipeline_golden_fixture.py  test_related_papers.py  test_search_url.py  test_source_resolver.py  test_tei_parse.py  test_unresolved_figure_ref_logging.py
tests/fixtures/: sample_fulltext.tei.xml
(+3 files in other folders)
